DigicielFull/force-app/main/default/objects/gnx__TR_line__c/gnx__TR_line__c.object-meta.xml
<CustomObject>
    <label>Ligne de reçu fiscal</label>
    <nameField>
        <displayFormat>LRF-{0000}</displayFormat>
        <label>Référence de la ligne</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de reçu fiscal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>