DigicielFull/force-app/main/default/objects/gnx__TR_line__c/fields/gnx__Amount__c.field-meta.xml
<CustomField>
    <fullName>gnx__Amount__c</fullName>
    <label>Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>