DigicielFull/force-app/main/default/objects/gnx__TR_line__c/fields/gnx__Donation_type__c.field-meta.xml
<CustomField>
    <fullName>gnx__Donation_type__c</fullName>
    <label>Nature du don</label>
    <length>255</length>
    <type>Text</type>
</CustomField>