DigicielFull/force-app/main/default/objects/gnx__TR_line__c/fields/gnx__Payment_method__c.field-meta.xml
<CustomField>
    <fullName>gnx__Payment_method__c</fullName>
    <label>Mode de paiement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>