DigicielFull/force-app/main/default/objects/gnx__TR_line__c/fields/gnx__Transaction_reference__c.field-meta.xml
<CustomField>
    <fullName>gnx__Transaction_reference__c</fullName>
    <label>Référence de la transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>